<resources>
    <string name="app_name">TallerCuatro</string>
    <string name="Id_user">1 </string>
    <string name="name_user">carlos</string>
    <string name="name_user2">loko1</string>
    <string name="city_user">pasto</string>
    <string name="company_user">exito</string>
    <string name="Id_Post">1</string>
    <string name="title_post">titulo</string>
    <string name="Body_post">body</string>
    <string name="Id_user_post">1</string>
    <string name="item_1">Actualizar Datos</string>
    <string name="List_Users">List Users</string>
    <string name="List_Posts">List Post</string>
    <string name="List_Coments">List Comments</string>
</resources>
