<?xml version="1.0" encoding="utf-8"?>

<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:orientation="horizontal"
    android:background="@color/colorAccent"
    >

    <ImageView
        android:id="@+id/img1_user_item"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="5dp"
        android:layout_gravity="left"
        />

    <LinearLayout
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Id: "/>

            <TextView
                android:id="@+id/id_item_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Id_user"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre: "/>

            <TextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_user"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre de Usuario: "/>

            <TextView
                android:id="@+id/username_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_user2"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ciudad: "/>

            <TextView
                android:id="@+id/city_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_user"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Compania: "/>

            <TextView
                android:id="@+id/name_company_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_user"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/img2_user_item"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_launcher"
        />




</LinearLayout>