<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img1_user_item"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="5dp"
        android:layout_gravity="left"
        />

    <LinearLayout
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Id: "/>

            <TextView
                android:id="@+id/id_user_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Id_user_post"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Id: "/>

            <TextView
                android:id="@+id/id_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Id_Post"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title: "/>

            <TextView
                android:id="@+id/title_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_post"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Body: "/>

            <TextView
                android:id="@+id/body_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Body_post"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/img2_user_item"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_launcher"
        />


</LinearLayout>